--- a/src/template.html
+++ b/src/template.html
@@ -7,10 +7,12 @@
     <body>
         <h1>
             <nav>
+                <a href=".">Home</a>
                 <a href="idk">Menu</a>
                 <a href="idk">Contact Us</a>
             </nav>
         </h1>
+        <h2>Welcome to One of the Restaurants of All Time!!!!!</h2>
         <div id="content"></div>
 
 
