Can load images through html-loader

--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,9 @@
             </nav>
         </h1>
         <h2>Welcome to One of the Restaurants of All Time!!!!!</h2>
+        <h3>"10/10 Would eat at again." </h3>
+        <h6>- Gordon Ramsey</h6>
+        <img src="restaurant.png" alt="">
         <div id="content"></div>
 
 
