Stuffed Home menu into IIFE

--- a/src/template.html
+++ b/src/template.html
@@ -8,15 +8,32 @@
         <h1>
             <nav>
                 <a href=".">Home</a>
-                <a href="idk">Menu</a>
+                <a href="idk" id="menu-button">Menu</a>
                 <a href="idk">Contact Us</a>
             </nav>
         </h1>
-        <h2>Welcome to One of the Restaurants of All Time!!!!!</h2>
-        <h3>"10/10 Would eat at again." </h3>
-        <h6>- Gordon Ramsey</h6>
-        <img src="restaurant.png" alt="">
-        <div id="content"></div>
+        
+        <div id="content">
+            <!-- <h2>Welcome to One of the Restaurants of All Time!!!!!</h2>
+            <h3>"10/10 Would eat at again." </h3>
+            <h6>- Gordon Ramsey</h6>
+            <img src="restaurant.png" alt="">
+            <div id="hours">
+                Hours 
+                <h5>Monday: 6PM - 6:30PM</h5>
+                <h5>Tuesday: 7PM - 7:30PM</h5>
+                <h5>Wednesday: 8PM - 8:30PM</h5>
+                <h5>Thursday: 9PM - 9:30PM</h5>
+                <h5>Friday: 9:30PM - 9:45PM</h5>
+                <h5>Saturday: 4AM - 4:10AM</h5>
+                <h5>Sunday: 12PM - 12:01PM</h5> -->
+            </div>
+
+
+
+        </div>
+        <div id="test">You should love yourself, NOW!</div>
+
 
 
     </body>  
