Changed nav content from href to buttons

--- a/src/template.html
+++ b/src/template.html
@@ -7,9 +7,9 @@
     <body>
         <h1>
             <nav>
-                <a href=".">Home</a>
-                <a href="idk" id="menu-button">Menu</a>
-                <a href="idk">Contact Us</a>
+                <button id="home-button">Home</button>
+                <button id="menu-button">Menu</button>
+                <button id="contact-button">Contact Us</button>
             </nav>
         </h1>
         
