Added module that renders menu

--- a/src/template.html
+++ b/src/template.html
@@ -27,6 +27,13 @@
                 <h5>Friday: 9:30PM - 9:45PM</h5>
                 <h5>Saturday: 4AM - 4:10AM</h5>
                 <h5>Sunday: 12PM - 12:01PM</h5> -->
+
+                <!-- <ul>Menu
+                    <li>Double Double</li>
+                    <li>Cheeseburger</li>
+                    <li>Fries</li>
+                    <li>Milkshake</li>
+                </ul> -->
             </div>
 
 
